add: added models for ml models

--- a/Movies_Search.ipynb
+++ b/Movies_Search.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN7szxKNgdjLUKnnMNjYpQ1"
+      "authorship_tag": "ABX9TyMAvBm/39wWi4WOp3SmZCo3"
     },
     "kernelspec": {
       "name": "python3",
@@ -1713,6 +1713,91 @@
           },
           "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "\n",
+        "with open(\"tfidf_vectorizer.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(tfidf, f)\n",
+        "\n",
+        "with open(\"tfidf_matrix.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(tfidf_matrix, f)\n",
+        "\n",
+        "with open(\"indices.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(indices, f)\n",
+        "\n",
+        "with open(\"df_rec.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(df_rec, f)"
+      ],
+      "metadata": {
+        "id": "mSemM78slqMa"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(\"mpnet_model\")"
+      ],
+      "metadata": {
+        "id": "S5vdhlWpmXkx"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.save(\"movie_embeddings.npy\", embeddings)"
+      ],
+      "metadata": {
+        "id": "j0Dlel--myl6"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r mpnet_model.zip mpnet_model"
+      ],
+      "metadata": {
+        "id": "darhkrGDrscd",
+        "outputId": "899c3cdb-06e5-4627-90df-2108b24aa3ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: mpnet_model/ (stored 0%)\n",
+            "  adding: mpnet_model/README.md (deflated 64%)\n",
+            "  adding: mpnet_model/2_Normalize/ (stored 0%)\n",
+            "  adding: mpnet_model/vocab.txt (deflated 53%)\n",
+            "  adding: mpnet_model/config_sentence_transformers.json (deflated 40%)\n",
+            "  adding: mpnet_model/special_tokens_map.json (deflated 85%)\n",
+            "  adding: mpnet_model/modules.json (deflated 62%)\n",
+            "  adding: mpnet_model/model.safetensors (deflated 8%)\n",
+            "  adding: mpnet_model/config.json (deflated 47%)\n",
+            "  adding: mpnet_model/sentence_bert_config.json (deflated 9%)\n",
+            "  adding: mpnet_model/1_Pooling/ (stored 0%)\n",
+            "  adding: mpnet_model/1_Pooling/config.json (deflated 59%)\n",
+            "  adding: mpnet_model/tokenizer.json (deflated 71%)\n",
+            "  adding: mpnet_model/.ipynb_checkpoints/ (stored 0%)\n",
+            "  adding: mpnet_model/movies_metadata.csv (deflated 62%)\n",
+            "  adding: mpnet_model/tokenizer_config.json (deflated 75%)\n"
+          ]
         }
       ]
     }
